# auditooor-hackathon

./: .gitignore  Makefile  README.md  requirements.txt
detectors/: Makefile  _hits_ledger.yaml  _predicate_engine.py  _template.py  _tier_registry.yaml  run_custom.py  run_regex_detectors.py  rust-substrate-origin-privileged-effect-missing-guard.py
docs/: HACKATHON_GUIDE.md  JUDGE_WALKTHROUGH.md  ORDERED_ZERO_DAY_PIPELINE_ROADMAP_2026-07-17.md  README.md  STAGE_REFERENCE.md
examples/: invariant_adoption_fresh_engagement_metrics.v1.json  project_source_roots.v1.json
patterns/: .unwired_allowlist
reference/: language_capabilities.json
schemas/: universal_task_ledger.v1.json  vault_layer.v1.json
scripts/: _capv3_iter3_T2_driver.py  _capv3_iter5_T1_driver.py  bootstrap-newclone.sh  pre-push-secret-scrub.sh  pre-source-read-inject.sh  sessionend-run-privacy-audit.sh
templates/: fee_math_fuzz.t.sol  poc_fork_test.t.sol  poc_isolated_test.t.sol
test_poc/: kelp_style_lz_oft_adapter.sol
tests/: test_epoch_accept_arm_self_guard.py  test_executed_depth_conversion.py  test_executed_refutation_poc_source_anchor.py  test_mustsucceed_panic_inscope_filter.py  test_onchain_live_precondition_check.py  test_prior_audit_resolved_reverify_gate.py  test_reasoner_regen_pass.py  test_slice_oob_bounded_scan.py  test_slice_oob_copy_fullslice_fp.py  (+2 more)
tools/tests/fixtures/RU4/panic_ws/: Cargo.toml
tools/tests/fixtures/RU4/panic_ws/crates/foo/src/: lib.rs
tools/tests/fixtures/RU4/wrap_silent_ws/: Cargo.toml
tools/tests/fixtures/RU4/wrap_silent_ws/crates/foo/: Cargo.toml
(+36913 files in other folders)
