# Panic (benign) workspace root: [profile.release] sets overflow-checks = true,
# so release arithmetic PANICS on overflow instead of wrapping. Mirrors the real
# near/src/Cargo.toml:440 and near-intents-contracts/src/Cargo.toml:255 benign.
[workspace]
resolver = "2"
members = ["crates/foo"]

[profile.release]
opt-level = 3
overflow-checks = true
