# Wrap-silent workspace root: [profile.release] OMITS overflow-checks, so the
# Cargo release default (false) applies -> arithmetic wraps silently.
[workspace]
resolver = "2"
members = ["crates/foo"]

[profile.release]
opt-level = 3
lto = true
# NOTE: overflow-checks intentionally omitted -> defaults to false (wrap-silent).
